# mac-mini-scraper

./: CLAUDE.md  email_sender.py  email_template.py  listings.json  monitor.py  pyproject.toml  scraper.py
.github/workflows/: monitor.yml
